...
        
        addNotifiObserver(name: "b") { (notifi) in
            print("ViewController接收到: \(notifi.userInfo.debugDescription)")
        }
        
        let titles = [
            "1、UITextField",
            "2、UIKit+Chainable(UIView，UILabel， UIButton, UIImageView等.....)",
            "3、TableView",
            "4、TextView",
            "5、ScrollView",
            "6、CollectionView",
            "7、SearchBar",
            "8、Notification",
...
